--- a/sipsd-flowable-editor/src/packages/vue-bpmn-viewer/assets/index.css
+++ b/sipsd-flowable-editor/src/packages/vue-bpmn-viewer/assets/index.css
@@ -2,7 +2,7 @@
     cursor: pointer;
 }
 .d-userTask:hover{
-    stroke: #3296fa !important;
+    stroke: #aaa !important;
 }
 .highlight-custom-path{
     stroke-dasharray:6;
