--- a/sipsd-flowable-editor/src/packages/vue-bpmn-viewer/components/styl/default/css/index.css
+++ b/sipsd-flowable-editor/src/packages/vue-bpmn-viewer/components/styl/default/css/index.css
@@ -1,3 +1,8 @@
+.clock-spin{
+    transform-origin: 512px 512px;
+    animation: spin 1s infinite;
+    animation-timing-function:linear;
+}
 .d-userTask{
     cursor: pointer;
 }
@@ -23,5 +28,13 @@
     100% {
         stroke-dashoffset:-60;
         stroke-width: 3;
+    }
+}
+@keyframes spin {
+    0% {
+        transform: rotate(0deg);
+    }
+    100% {
+        transform: rotate(360deg);
     }
 }
