--- a/sipsd-flowable-editor/src/packages/vue-bpmn-viewer/components/styl/default/css/index.css
+++ b/sipsd-flowable-editor/src/packages/vue-bpmn-viewer/components/styl/default/css/index.css
@@ -1,21 +1,21 @@
-.clock-spin{
+.dpark-bpmn-viewer[data-theme='default'] .clock-spin{
     transform-origin: 512px 512px;
     animation: spin 1s infinite;
     animation-timing-function:linear;
 }
-.d-userTask{
+.dpark-bpmn-viewer[data-theme='default'] .d-userTask{
     cursor: pointer;
 }
-.d-userTask:hover{
+.dpark-bpmn-viewer[data-theme='default'] .d-userTask:hover{
     stroke: #aaa !important;
 }
-.highlight-custom-path{
+.dpark-bpmn-viewer[data-theme='default'] .highlight-custom-path{
     stroke-dasharray:6;
     animation: complete 2s infinite;
     animation-timing-function:linear;
 }
 
-@keyframes complete {
+.dpark-bpmn-viewer[data-theme='default'] @keyframes complete {
     0%{
         stroke-dashoffset:0;
         stroke-width: 3;
@@ -30,7 +30,7 @@
         stroke-width: 3;
     }
 }
-@keyframes spin {
+.dpark-bpmn-viewer[data-theme='default'] @keyframes spin {
     0% {
         transform: rotate(0deg);
     }
@@ -39,12 +39,12 @@
     }
 }
 
-.bt-layout-header{
+.dpark-bpmn-viewer[data-theme='default'] .bt-layout-header{
     position: absolute;
     top: 6px;
     right: 20px;
 }
-.bt-layout-right{
+.dpark-bpmn-viewer[data-theme='default'] .bt-layout-right{
     position: absolute;
     right: 0;
     top: 60px;
@@ -52,7 +52,7 @@
     display: flex;
     align-items: flex-end;
 }
-.no-bpmn{
+.dpark-bpmn-viewer[data-theme='default'] .no-bpmn{
     height: 100%;
     width: 100%;
     text-align: center;
@@ -64,17 +64,17 @@
     background-position: center center;
     background-repeat: no-repeat;
 }
-.no-bpmn img{
+.dpark-bpmn-viewer[data-theme='default'] .no-bpmn img{
     display: inline-block;
     margin-top: 100px;
     width: 700px;
 }
-.legend{
+.dpark-bpmn-viewer[data-theme='default'] .legend{
     position: absolute;
     bottom: 26px;
     left: 0;
 }
-.legend-ul{
+.dpark-bpmn-viewer[data-theme='default'] .legend-ul{
     list-style: none;
     display: flex;
     justify-content: left;
@@ -82,59 +82,59 @@
     margin: 0 0 0 20px;
     padding: 0;
 }
-.legend-ul li{
+.dpark-bpmn-viewer[data-theme='default'] .legend-ul li{
     padding-right: 40px;
 }
-.legend-ul li span{
+.dpark-bpmn-viewer[data-theme='default'] .legend-ul li span{
     display: inline-block;
     margin-left: 8px;
 }
-.legend-icon{
+.dpark-bpmn-viewer[data-theme='default'] .legend-icon{
     display: inline-block;
     width: 18px;
     height: 18px;
     background: #333;
     vertical-align: sub;
 }
-.legend-none{
+.dpark-bpmn-viewer[data-theme='default'] .legend-none{
     background: #aaa;
     border:1px solid #8f8f8f;
     opacity: 0.8;
 }
-.legend-unExec{
+.dpark-bpmn-viewer[data-theme='default'] .legend-unExec{
     background: #f5842c;
     border:1px solid #d66106;
     opacity: 0.8;
 }
-.legend-exec{
+.dpark-bpmn-viewer[data-theme='default'] .legend-exec{
     background:#5bc14b;
     border:1px solid #459838;
     opacity: 0.8;
 }
-.legend-back{
+.dpark-bpmn-viewer[data-theme='default'] .legend-back{
     background:#ff0000;
     border:1px solid #ad0000;
     opacity: 0.8;
 }
-.io-control-list {
+.dpark-bpmn-viewer[data-theme='default'] .io-control-list {
     list-style: none;
     padding: 5px;
     margin: 0;
 }
 
-.io-zoom-controls {
+.dpark-bpmn-viewer[data-theme='default'] .io-zoom-controls {
     width: 34px;
     margin-right: 10px;
 }
 
-.io-control {
+.dpark-bpmn-viewer[data-theme='default'] .io-control {
     background: #FAFAFA;
     border-radius: 2px;
     border: solid 1px #E0E0E0;
     padding: 5px;
 }
 
-.io-control-list a, .io-control-list a:visited, .io-control-list button {
+.dpark-bpmn-viewer[data-theme='default'] .io-control-list a, .io-control-list a:visited, .io-control-list button {
     padding: 0;
     outline: none;
     cursor: pointer;
@@ -145,12 +145,12 @@
     border: none;
 }
 
-.io-control hr {
+.dpark-bpmn-viewer[data-theme='default'] .io-control hr {
     border: none;
     border-top: solid 1px #DDD;
     width: 15px;
 }
-.icon{
+.dpark-bpmn-viewer[data-theme='default'] .icon{
     display: flex;
     align-items:center;
     justify-content: center;
@@ -159,31 +159,31 @@
     width: 20px;
     height: 20px;
 }
-.icon-aim{
+.dpark-bpmn-viewer[data-theme='default'] .icon-aim{
     background: url("../icons/DoAiming.svg") no-repeat;
     background-size: contain;
 }
-.icon-aim:hover{
+.dpark-bpmn-viewer[data-theme='default'] .icon-aim:hover{
     background: url("../icons/DoAiming-hover.svg") no-repeat;
     background-size: contain;
 }
-.icon-plus{
+.dpark-bpmn-viewer[data-theme='default'] .icon-plus{
     background: url("../icons/DoZoomIn.svg") no-repeat;
     background-size: contain;
 }
-.icon-plus:hover{
+.dpark-bpmn-viewer[data-theme='default'] .icon-plus:hover{
     background: url("../icons/DoZoomIn-hover.svg") no-repeat;
     background-size: contain;
 }
-.icon-minus{
+.dpark-bpmn-viewer[data-theme='default'] .icon-minus{
     background: url("../icons/DoZoomOut.svg") no-repeat;
     background-size: contain;
 }
-.icon-minus:hover{
+.dpark-bpmn-viewer[data-theme='default'] .icon-minus:hover{
     background: url("../icons/DoZoomOut-hover.svg") no-repeat;
     background-size: contain;
 }
-.bpmn-time-line{
+.dpark-bpmn-viewer[data-theme='default'] .bpmn-time-line{
     z-index: 10;
     height: 100%;
     margin-right: 20px;
@@ -197,87 +197,87 @@
     transition: height .3s;
     text-align: left;
 }
-.bpmn-time-line .el-timeline{
+.dpark-bpmn-viewer[data-theme='default'] .bpmn-time-line .el-timeline{
     padding-left: 20px;
 }
-.spin-center{
+.dpark-bpmn-viewer[data-theme='default'] .spin-center{
     display: flex;
     align-items: center;
     justify-content: center;
     text-align: center;
 }
-.spin-center .ant-spin-nested-loading{
+.dpark-bpmn-viewer[data-theme='default'] .spin-center .ant-spin-nested-loading{
     flex: 1;
 }
-.no-data{
+.dpark-bpmn-viewer[data-theme='default'] .no-data{
     width: 50px;
     height: 50px;
     background-size: contain;
     background: url("../icons/nodata.svg") no-repeat;
 }
-.timeLine-item-over{
+.dpark-bpmn-viewer[data-theme='default'] .timeLine-item-over{
     padding: 5px 8px;
     transition: background .1s;
     text-align: left;
     border-radius: 5px;
 }
-.timeLine-item-over-ed:hover{
+.dpark-bpmn-viewer[data-theme='default'] .timeLine-item-over-ed:hover{
     background: rgba(91,193,75,0.8);
 }
-.timeLine-item-active-ed{
+.dpark-bpmn-viewer[data-theme='default'] .timeLine-item-active-ed{
     background: rgba(91,193,75,0.8);
 }
-.timeLine-item-over-turn:hover{
+.dpark-bpmn-viewer[data-theme='default'] .timeLine-item-over-turn:hover{
     background: rgba(255,0,0,0.8);
 }
-.timeLine-item-active-turn{
+.dpark-bpmn-viewer[data-theme='default'] .timeLine-item-active-turn{
     background: rgba(255,0,0,0.8);
 }
-.timeLine-item-over-uned:hover{
+.dpark-bpmn-viewer[data-theme='default'] .timeLine-item-over-uned:hover{
     background: rgba(245,132,44,0.8);
 }
-.timeLine-item-active-uned{
+.dpark-bpmn-viewer[data-theme='default'] .timeLine-item-active-uned{
     background: rgba(245,132,44,0.8);
 }
-.timeLine-item-active-ed,.timeLine-item-active-turn,.timeLine-item-active-uned,
-.timeLine-item-over-uned:hover p,.timeLine-item-over-ed:hover p,.timeLine-item-over-turn:hover p{
+.dpark-bpmn-viewer[data-theme='default'] .timeLine-item-active-ed,.timeLine-item-active-turn,.timeLine-item-active-uned,
+.dpark-bpmn-viewer[data-theme='default'] .timeLine-item-over-uned:hover p,.timeLine-item-over-ed:hover p,.timeLine-item-over-turn:hover p{
     color: #fff;
 }
 
 /* 设置滚动条的样式 */
-::-webkit-scrollbar {
+.dpark-bpmn-viewer[data-theme='default'] ::-webkit-scrollbar {
     width:8px;
 }
 /* 滚动槽 */
-::-webkit-scrollbar-track {
+.dpark-bpmn-viewer[data-theme='default'] ::-webkit-scrollbar-track {
     -webkit-box-shadow:inset006pxrgba(0,0,0,0.3);
     background: rgba(217, 217, 217, 0.3);
 
 }
 /* 滚动条滑块 */
-::-webkit-scrollbar-thumb {
+.dpark-bpmn-viewer[data-theme='default'] ::-webkit-scrollbar-thumb {
     border-radius:5px;
     background: rgba(94, 94, 94, 0.3);
     -webkit-box-shadow:inset006pxrgba(0,0,0,0.5);
 }
-::-webkit-scrollbar-thumb:window-inactive {
+.dpark-bpmn-viewer[data-theme='default'] ::-webkit-scrollbar-thumb:window-inactive {
     background: rgba(94, 94, 94, 0.3);
 }
-.timeline{
+.dpark-bpmn-viewer[data-theme='default'] .timeline{
     position: relative;
     padding-left:20px
 }
-.timeline-item{
+.dpark-bpmn-viewer[data-theme='default'] .timeline-item{
     position: relative;
     padding-bottom:20px
 }
-.timeline-item__tail{
+.dpark-bpmn-viewer[data-theme='default'] .timeline-item__tail{
     position: absolute;
     left: 4px;
     height: 100%;
     border-left: 2px solid #e4e7ed;
 }
-.timeline-item__node{
+.dpark-bpmn-viewer[data-theme='default'] .timeline-item__node{
     left: -1px;
     width: 12px;
     height: 12px;
@@ -291,13 +291,13 @@
     -ms-flex-align: center;
     align-items: center;
 }
-.timeline-item__wrapper{
+.dpark-bpmn-viewer[data-theme='default'] .timeline-item__wrapper{
     position: relative;
     padding-left: 28px;
     top: -3px;
     box-sizing: border-box;
 }
-.timeline-item__timestamp{
+.dpark-bpmn-viewer[data-theme='default'] .timeline-item__timestamp{
     margin-bottom: 8px;
     padding-top: 4px;
     color: #909399;
