修改工作流样式主题

--- a/sipsd-flowable-editor/src/packages/vue-bpmn-viewer/components/styl/default/css/index.css
+++ b/sipsd-flowable-editor/src/packages/vue-bpmn-viewer/components/styl/default/css/index.css
@@ -1,3 +1,4 @@
+/*@import "../index.js";*/
 .dpark-bpmn-viewer[data-theme='default'] .clock-spin{
     transform-origin: 512px 512px;
     animation: spin 1s infinite;
