--- a/sipsd-flowable-editor/src/packages/vue-bpmn-viewer/components/styl/default/css/index.css
+++ b/sipsd-flowable-editor/src/packages/vue-bpmn-viewer/components/styl/default/css/index.css
@@ -9,6 +9,17 @@
 .dpark-bpmn-viewer[data-theme='default'] .d-userTask:hover{
     stroke: #aaa !important;
 }
+.dpark-bpmn-viewer[data-theme='default'] .d-userTask-title{
+    text-align: left;
+    font-size: 12px;
+    color: #fff;
+    padding-left: 23px;
+    text-overflow: ellipsis;
+    overflow: hidden;
+    white-space: nowrap;
+    width: 100%;
+    height: 100%;
+}
 .dpark-bpmn-viewer[data-theme='default'] .highlight-custom-path{
     stroke-dasharray:6;
     animation: complete 2s infinite;
