--- a/sipsd-flowable-parent/sipsd-flowable-manager/src/main/resources/static/views/popup/multi-process-import.html
+++ b/sipsd-flowable-parent/sipsd-flowable-manager/src/main/resources/static/views/popup/multi-process-import.html
@@ -7,7 +7,7 @@
             		<div class="pull-right">
                         <a class="action" ng-click="cancel()">&times; {{'GENERAL.ACTION.CANCEL' | translate}}</a>
                     </div>
-            		<h2>{{'PROCESS.POPUP.IMPORT-TITLE' | translate}}</h2>
+            		<h2>{{'PROCESS.POPUP.IMPORT-MULTI-TITLE' | translate}}</h2>
             	</div>
             </div>
             <div class="modal-body">
@@ -26,7 +26,7 @@
                          ngf-drag-over-class="dragover"
                          ngf-multiple="true"
                          ng-show="dropSupported">
-                        {{'PROCESS.POPUP.IMPORT.DROPZONE' | translate}}
+                        {{'PROCESS.POPUP.IMPORT.MULTI-DROPZONE' | translate}}
                     </div>
                     <div ngf-drop-available="dropSupported=true"
                          ng-show="!dropSupported">{{'PROCESS.POPUP.IMPORT.NO-DROP' | translate}}</div>
@@ -50,7 +50,7 @@
                          ngf-drag-over-class="dragover"
                          ngf-multiple="true"
                          ng-show="dropSupported">
-                        {{'PROCESS.POPUP.IMPORT.DROPZONE' | translate}}
+                        {{'PROCESS.POPUP.IMPORT.MULTI-DROPZONE' | translate}}
                     </div>
                     <div ngf-drop-available="dropSupported=true"
                          ng-show="!dropSupported">{{'PROCESS.POPUP.IMPORT.NO-DROP' | translate}}</div>
