修改移动端的按钮大小

--- a/sipsd-flowable-editor/src/packages/vue-bpmn-viewer/components/styl/dark/css/index.css
+++ b/sipsd-flowable-editor/src/packages/vue-bpmn-viewer/components/styl/dark/css/index.css
@@ -301,3 +301,14 @@
     line-height: 1;
     font-size: 13px;
 }
+.dpark-bpmn-viewer[data-theme='dark'] .controls-flag {
+    width: 46px;
+    margin-right: 10px;
+}
+.dpark-bpmn-viewer[data-theme='dark'] .icon-flag {
+    width: 36px;
+    height: 36px;
+}
+.dpark-bpmn-viewer[data-theme='dark'] .hr-flag {
+    width: 30px;
+}
