--- a/sipsd-flowable-editor/src/packages/vue-bpmn-viewer/components/styl/default/css/index.css
+++ b/sipsd-flowable-editor/src/packages/vue-bpmn-viewer/components/styl/default/css/index.css
@@ -258,3 +258,14 @@
     line-height: 1;
     font-size: 13px;
 }
+.dpark-bpmn-viewer[data-theme='default'] .controls-flag {
+    width: 46px;
+    margin-right: 10px;
+}
+.dpark-bpmn-viewer[data-theme='default'] .icon-flag {
+    width: 36px;
+    height: 36px;
+}
+.dpark-bpmn-viewer[data-theme='default'] .hr-flag {
+    width: 30px;
+}
