--- a/sipsd-flowable-editor/src/packages/vue-bpmn-viewer/components/styl/classic/css/index.css
+++ b/sipsd-flowable-editor/src/packages/vue-bpmn-viewer/components/styl/classic/css/index.css
@@ -300,3 +300,14 @@
     line-height: 1;
     font-size: 13px;
 }
+.dpark-bpmn-viewer[data-theme='classic'] .controls-flag {
+    width: 46px;
+    margin-right: 10px;
+}
+.dpark-bpmn-viewer[data-theme='classic'] .icon-flag {
+    width: 36px;
+    height: 36px;
+}
+.dpark-bpmn-viewer[data-theme='classic'] .hr-flag {
+    width: 30px;
+}
