--- a/sipsd-flowable-editor/src/packages/vue-bpmn-viewer/components/styl/dark/css/index.css
+++ b/sipsd-flowable-editor/src/packages/vue-bpmn-viewer/components/styl/dark/css/index.css
@@ -79,6 +79,20 @@
     display: inline-block;
     margin-left: 8px;
 }
+.dpark-bpmn-viewer[data-theme='dark'] .legend-ul-small{
+    list-style: none;
+    justify-content: left;
+    align-items: center;
+    margin: 0 0 0 20px;
+    padding: 0;
+}
+.dpark-bpmn-viewer[data-theme='dark'] .legend-ul-small li{
+    padding-top: 20px;
+}
+.dpark-bpmn-viewer[data-theme='dark'] .legend-ul-small li span{
+    display: inline-block;
+    margin-left: 8px;
+}
 .dpark-bpmn-viewer[data-theme='dark'] .legend-icon{
     display: inline-block;
     width: 18px;
@@ -180,6 +194,30 @@
     background: url("../icons/DoZoomOut-hover.svg") no-repeat;
     background-size: contain;
 }
+/*.dpark-bpmn-viewer[data-theme='dark'] .icon-menu{*/
+/*    background: url("../icons/DoMenuUnfoldOne.svg") no-repeat;*/
+/*    background-size: contain;*/
+/*}*/
+/*.dpark-bpmn-viewer[data-theme='dark'] .icon-menu:hover{*/
+/*    background: url("../icons/DoMenuUnfoldOne-hover.svg") no-repeat;*/
+/*    background-size: contain;*/
+/*}*/
+.dpark-bpmn-viewer[data-theme='dark'] .icon-menu-left{
+    background: url("../icons/DoExpandLeft.svg") no-repeat;
+    background-size: contain;
+}
+.dpark-bpmn-viewer[data-theme='dark'] .icon-menu-left:hover{
+    background: url("../icons/DoExpandLeft-hover.svg") no-repeat;
+    background-size: contain;
+}
+.dpark-bpmn-viewer[data-theme='dark'] .icon-menu-right{
+    background: url("../icons/DoExpandRight.svg") no-repeat;
+    background-size: contain;
+}
+.dpark-bpmn-viewer[data-theme='dark'] .icon-menu-right:hover{
+    background: url("../icons/DoExpandRight-hover.svg") no-repeat;
+    background-size: contain;
+}
 .dpark-bpmn-viewer[data-theme='dark'] .bpmn-time-line{
     z-index: 10;
     height: 98%;
@@ -262,7 +300,7 @@
 }
 .dpark-bpmn-viewer[data-theme='dark'] .timeline{
     position: relative;
-    padding-left:20px
+    padding-left:20px;
 }
 .dpark-bpmn-viewer[data-theme='dark'] .timeline-item{
     position: relative;
@@ -311,4 +349,7 @@
 }
 .dpark-bpmn-viewer[data-theme='dark'] .hr-flag {
     width: 30px;
+}
+.dpark-bpmn-viewer[data-theme='dark'] .djs-label  {
+    color: #F5F5F7;
 }
